commit translated contents

--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -382,7 +382,7 @@
               href: backup-azure-arm-userestapi-managejobs.md
         - name: Resource Manager テンプレート
           href: backup-rm-template-samples.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: 概要
           href: security-overview.md
@@ -406,8 +406,6 @@
           href: backup-encryption.md
         - name: カスタマー マネージド キーを使用した暗号化
           href: encryption-at-rest-with-cmk.md
-        - name: 組み込みのセキュリティ制御
-          href: backup-security-controls.md
         - name: Azure Policy によるセキュリティ制御
           displayName: 'regulatory, compliance, standards, domains'
           href: ./security-controls-policy.md
