--- a/articles/cognitive-services/Anomaly-Detector/index.yml
+++ b/articles/cognitive-services/Anomaly-Detector/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/10/2019
   ms.author: aahi
-  ms.openlocfilehash: 26632aebbd6cddd1463064b397a2f42071a5d518
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 4bce0b354d1daffccfea108b5668f33fd429f075
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "81757290"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92371241"
 landingContent:
 - title: Anomaly Detector API について
   linkLists:
@@ -98,6 +98,12 @@ landingContent:
       url: https://aka.ms/adadvisorsjoin
     - text: お勧めのユーザー生成コンテンツ
       url: user-generated-content.md
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/anomaly-detector/context/context
 - title: リファレンス
   linkLists:
   - linkListType: reference
