--- a/articles/cognitive-services/Translator/index.yml
+++ b/articles/cognitive-services/Translator/index.yml
@@ -13,18 +13,18 @@ metadata:
   ms.topic: landing-page
   ms.date: 10/14/2019
   ms.author: erhopf
-  ms.openlocfilehash: 275f4d4228e28e3f8c31263001b48fa28d46e353
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 5c25a45e02433ece463198e4cfd4a26758031a27
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90090008"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92368674"
 landingContent:
-- title: Translator
+- title: '[変換者]'
   linkLists:
   - linkListType: overview
     links:
-    - text: Translator
+    - text: '[変換者]'
       url: translator-info-overview.md
     - text: Custom Translator
       url: translator-info-overview.md
@@ -96,3 +96,9 @@ landingContent:
       url: https://aka.ms/TranslatorGitHub
     - text: Stack Overflow
       url: https://stackoverflow.com/questions/tagged/microsoft-translator
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/translator/context/context
