--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: 418d97607be5c96dc80a186a4986cff584a19cdb
-  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
+  ms.openlocfilehash: c6bb89a5153df399a0215fb258fbb74b0adcef36
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/13/2020
-  ms.locfileid: "91960356"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92368402"
 landingContent:
 - title: Form Recognizer について
   linkLists:
@@ -146,7 +146,5 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
-    - text: UserVoice
-      url: https://go.microsoft.com/fwlink/?linkid=2090535
-    - text: Stack Overflow
-      url: https://go.microsoft.com/fwlink/?linkid=2087186
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/form-recognizer/context/context
