--- a/articles/cognitive-services/immersive-reader/index.yml
+++ b/articles/cognitive-services/immersive-reader/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: IEvangelist
   ms.author: dapine
   ms.date: 01/23/2020
-  ms.openlocfilehash: 9f0ed5265bc4371169097d2fedcbfcddb62d3bff
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 519abb112f0bb0d5a74a84bb6e84bddda9acbf48
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "86045435"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92371394"
 landingContent:
 - title: Immersive Reader の概要
   linkLists:
@@ -79,3 +79,9 @@ landingContent:
     links:
     - text: JavaScript SDK
       url: reference.md
+- title: ヘルプとフィードバック
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/immersive-reader/context/context
