--- a/articles/cognitive-services/personalizer/index.yml
+++ b/articles/cognitive-services/personalizer/index.yml
@@ -12,12 +12,12 @@ metadata:
   title: Personalizer のドキュメント
   titleSuffix: Azure Cognitive Services
   description: Azure Personalizer は、ユーザーのリアルタイムの動作から学習し、ユーザーに表示する最良のエクスペリエンスを選択できるようにするクラウドベースの API サービスです。
-  ms.openlocfilehash: 28197f7408ea93ed07d09e1ae44e7924f4605a14
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 51aba4941eb1e1e575e6d33a48a8fe1552eb4d47
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88506551"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92371139"
 landingContent:
 - title: Personalizer について
   linkLists:
@@ -123,9 +123,7 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/personalizer/context/context
     - text: トラブルシューティング
       url: troubleshooting.md
-    - text: Stack Overflow で質問する
-      url: https://stackoverflow.com/questions/tagged/personalizer
-    - text: UserVoice によるサービスへの影響
-      url: https://cognitive.uservoice.com/forums/921562-personalizer
