--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -67,6 +67,8 @@
       items:
         - name: リモート ファイルのエンコードとストリーム配信 (REST)
           href: stream-files-tutorial-with-rest.md
+        - name: Media Services でのカスタマー マネージド キー
+          href: tutorial-byok.md
     - name: CLI
       items:
         - name: リモート ファイルのエンコードとストリーム配信 (CLI)
@@ -175,6 +177,8 @@
         - name: 動的暗号化とキー配信
           displayName: 'content protection, streaming protocols, encryption types, PlayReady, Widevine, FairPlay, custom'
           href: content-protection-overview.md
+        - name: 顧客管理キー
+          href: concept-use-customer-managed-keys-byok.md
         - name: マルチ DRM システムの設計
           displayName: 'drm, access control'
           href: design-multi-drm-system-with-access-control.md
