--- a/articles/scheduler/index.yml
+++ b/articles/scheduler/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: derek1ee
   ms.author: estfan
   ms.date: 03/30/2020
-  ms.openlocfilehash: 04be683d3bd3d874efb44685b0d40b8c2d5a9698
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 2595c05fe21d407ca75eea09867dd79ee20f0508
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "80422980"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92368198"
 landingContent:
 - title: 移行
   linkLists:
@@ -32,6 +32,6 @@ landingContent:
   - linkListType: reference
     links:
     - text: REST API
-      url: https://docs.microsoft.com/rest/api/scheduler/
+      url: /rest/api/scheduler/
     - text: PowerShell
       url: scheduler-powershell-reference.md
