--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -292,8 +292,8 @@
                   href: learn/quick-create-workspace-cli.md
                 - name: PowerShell
                   href: platform/powershell-workspace-configuration.md
-                - name: Resource Manager テンプレート
-                  href: ./samples/resource-manager-workspace.md
+            - name: ワークスペースの監視
+              href: platform/monitor-workspace.md
             - name: ワークスペースの削除と復旧
               href: platform/delete-workspace.md
             - name: アクセスを管理する
