--- a/articles/scheduler/TOC.yml
+++ b/articles/scheduler/TOC.yml
@@ -49,7 +49,7 @@
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/updates/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-scheduler.html'
+      href: /answers/topics/azure-scheduler.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-scheduler'
     - name: 価格
