--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -8,9 +8,11 @@
   expanded: true
   items:
     - name: VPN ゲートウェイを作成して管理する
-      href: vpn-gateway-tutorial-create-gateway-powershell.md
-    - name: S2S VPN 接続を作成して管理する
-      href: vpn-gateway-tutorial-vpnconnection-powershell.md
+      items:
+        - name: Azure portal
+          href: tutorial-create-gateway-portal.md
+        - name: Azure PowerShell
+          href: vpn-gateway-tutorial-create-gateway-powershell.md
 - name: サンプル
   items:
     - name: Azure PowerShell
@@ -64,7 +66,7 @@
         - name: ルートベースの VPN ゲートウェイの作成
           items:
             - name: Azure portal
-              href: create-routebased-vpn-gateway-portal.md
+              href: tutorial-create-gateway-portal.md
             - name: Azure PowerShell
               href: create-routebased-vpn-gateway-powershell.md
             - name: Azure CLI
@@ -72,7 +74,7 @@
         - name: VPN ゲートウェイ接続の確認
           href: vpn-gateway-verify-connection-resource-manager.md
         - name: VPN ゲートウェイのリセット
-          href: vpn-gateway-resetgw-classic.md
+          href: reset-gateway.md
         - name: VPN ゲートウェイの削除
           items:
             - name: Azure portal
