commit translated contents

--- a/articles/active-directory/app-provisioning/index.yml
+++ b/articles/active-directory/app-provisioning/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   manager: celested
-  ms.openlocfilehash: 0972d7fe35932aa880a63d1de77a1e8361c95689
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 21e1ed894e61d222ab579d15f5a4bb63903baea4
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88235657"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92366634"
 landingContent:
 - title: ユーザーとグループをクラウド アプリにプロビジョニングする
   linkLists:
@@ -65,3 +65,9 @@ landingContent:
       url: ../saas-apps/workday-inbound-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
     - text: SAP SuccessFactors のプロビジョニング
       url: ../saas-apps/sap-successfactors-inbound-provisioning-cloud-only-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
+- title: ドキュメントの最新情報
+  linkLists:
+  - linkListType: whats-new
+    links:
+    - text: ドキュメントの最新情報
+      url: whats-new-docs.md
