--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mtillman
   manager: daveba
   ms.date: 05/29/2020
-  ms.openlocfilehash: 13e69e5f45244be79d06b0014d32e5c8192c777c
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 33bba82d473d6c9c39e78e2e3587fc4f886fd1ba
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "86038074"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92359545"
 highlightedContent:
   items:
   - title: Azure AD とは
@@ -140,17 +140,17 @@ conceptualContent:
       text: 詳細情報
   - title: エンタープライズ ユーザー
     links:
-    - url: ./users-groups-roles/groups-create-rule.md
+    - url: ./enterprise-users/groups-create-rule.md
       itemType: how-to-guide
       text: 動的グループの作成
-    - url: ./users-groups-roles/groups-settings-v2-cmdlets.md
+    - url: ./enterprise-users/groups-settings-v2-cmdlets.md
       itemType: how-to-guide
       text: Azure AD グループ用の PowerShell
-    - url: ./users-groups-roles/directory-service-limits-restrictions.md
+    - url: ./enterprise-users/directory-service-limits-restrictions.md
       itemType: reference
       text: Azure AD サービスの制限と制約
     footerLink:
-      url: ./users-groups-roles/index.yml
+      url: ./enterprise-users/index.yml
       text: 詳細情報
   - title: '[外部 ID]'
     links:
@@ -263,6 +263,20 @@ conceptualContent:
       text: サインインのエラー コード リファレンス
     footerLink:
       url: ./reports-monitoring/index.yml
+      text: 詳細情報
+  - title: ロール
+    links:
+    - url: ./roles/groups-assign-role.md
+      itemType: how-to-guide
+      text: クラウド グループにロールを割り当てる
+    - url: ./roles/custom-create.md
+      itemType: how-to-guide
+      text: カスタム ロールを作成する
+    - url: ./roles/groups-view-assignments.md
+      itemType: reference
+      text: グループに割り当てられたロールを表示する
+    footerLink:
+      url: ./roles/index.yml
       text: 詳細情報
 additionalContent:
   sections:
