--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: kenwith
   ms.author: kenwith
   manager: celested
-  ms.openlocfilehash: e3232f319c14af6724bc5b844f71a5c6ff34bfa9
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 66d2691d1e8c10c21b419cc5c6672179f89171a9
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91535000"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92372448"
 landingContent:
 - title: アプリ管理について
   linkLists:
@@ -111,7 +111,5 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
-    - text: SAML ベースの SSO を設定する
-      url: add-application-portal-setup-sso.md
-    - text: OIDC ベースの SSO を設定する
-      url: add-application-portal-setup-oidc-sso.md
+    - text: ドキュメントの最新情報
+      url: whats-new-docs.md
