--- a/articles/devops-project/toc.yml
+++ b/articles/devops-project/toc.yml
@@ -1,53 +1,63 @@
-- name: Azure DevOps Starter のドキュメント
+- name: DevOps Starter のドキュメント
   href: index.yml
 - name: 概要
   items:
-    - name: Azure DevOps Starter とは
+    - name: DevOps Starter とは
       href: overview.md
 - name: クイックスタート
   expanded: true
   items:
-    - name: .NET
-      href: ./azure-devops-project-aspnet-core.md
-      maintainContext: true
-    - name: Node.js
-      href: ./azure-devops-project-nodejs.md
-      maintainContext: true
-    - name: Java
-      href: ./azure-devops-project-java.md
-      maintainContext: true
-    - name: Python
-      href: ./azure-devops-project-python.md
-      maintainContext: true
-    - name: PHP
-      href: ./azure-devops-project-php.md
-      maintainContext: true
-    - name: Ruby
-      href: ./azure-devops-project-ruby.md
-      maintainContext: true
-    - name: Go
-      href: ./azure-devops-project-go.md
-      maintainContext: true
+    - name: GitHub のアクション
+      items:
+        - name: Node.js
+          href: ./devops-starter-gh-nodejs.md
+          maintainContext: true
+    - name: Azure DevOps
+      items:
+        - name: .NET
+          href: ./azure-devops-project-aspnet-core.md
+          maintainContext: true
+        - name: Node.js
+          href: ./azure-devops-project-nodejs.md
+          maintainContext: true
+        - name: Java
+          href: ./azure-devops-project-java.md
+          maintainContext: true
+        - name: Python
+          href: ./azure-devops-project-python.md
+          maintainContext: true
+        - name: PHP
+          href: ./azure-devops-project-php.md
+          maintainContext: true
+        - name: Ruby
+          href: ./azure-devops-project-ruby.md
+          maintainContext: true
+        - name: Go
+          href: ./azure-devops-project-go.md
+          maintainContext: true
 - name: チュートリアル
   items:
-    - name: 1 - GitHub と DevOps Starter
+    - name: GitHub Actions を使用して Azure Web アプリにデプロイする
+      href: devops-starter-gh-web-app.md
+      maintainContext: true
+    - name: GitHub を使用した BYOC
       href: azure-devops-project-github.md
       maintainContext: true
-    - name: 2 - VM にデプロイする
+    - name: Azure DevOps を使用して VM にデプロイする
       href: azure-devops-project-vms.md
       maintainContext: true
-    - name: 3 - Azure SQL Database にデプロイする
+    - name: Azure DevOps を使用して Azure SQL Database にデプロイする
       href: azure-devops-project-sql-database.md
       maintainContext: true
-    - name: 4 - AKS にデプロイする
+    - name: Azure DevOps を使用して AKS にデプロイする
       href: azure-devops-project-aks.md
       maintainContext: true
-    - name: 5 - Azure Service Fabric にデプロイする
+    - name: Azure DevOps を使用して Azure Service Fabric にデプロイする
       href: azure-devops-project-service-fabric.md
       maintainContext: true
-    - name: 6- Azure Cosmos DB にデプロイする
+    - name: Azure DevOps を使用して Azure Cosmos DB にデプロイする
       href: azure-devops-project-cosmos-db.md
       maintainContext: true
-    - name: 7- Azure Functions にデプロイする
+    - name: Azure DevOps を使用して Azure Functions にデプロイする
       href: azure-devops-project-functions.md
       maintainContext: true
