--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -100,7 +100,9 @@
           href: rbac-migration.md
         - name: アクセスに関する問題のトラブルシューティング
           href: troubleshooting-access-issues.md
-    - name: ログ記録を有効にする方法
+    - name: 論理的な削除と消去保護を有効にする
+      href: key-vault-recovery.md
+    - name: ログの有効化
       href: howto-logging.md
     - name: 開発
       items:
@@ -109,7 +111,7 @@
         - name: Azure Resource Manager を使用して Key Vault をデプロイする
           href: vault-create-template.md
         - name: Web アプリのシークレットの保存
-          href: vs-secure-secret-appsettings.md
+          href: /previous-versions/azure/key-vault/vs-secure-secret-appsettings?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
         - name: .NET を使用したサービス間認証
           href: service-to-service-authentication.md
         - name: Key Vault に接続したサービスを使用する
@@ -134,14 +136,6 @@
           href: private-link-service.md
         - name: ファイアウォールの向こう側にある Key Vault へのアクセス - Azure Key Vault
           href: access-behind-firewall.md
-    - name: 論理的な削除
-      items:
-        - name: Key Vault の回復 (論理的な削除と消去保護)
-          href: key-vault-recovery.md
-        - name: CLI での論理的な削除の使用
-          href: soft-delete-cli.md
-        - name: PowerShell での論理的な削除の使用
-          href: soft-delete-powershell.md
     - name: キー コンテナーを移動する
       items:
         - name: キー コンテナーを別のリソース グループに移動する
