--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -151,9 +151,9 @@
                 - name: .NET
                   href: sql-api-get-started.md
                 - name: Java
-                  href: sql-api-java-get-started.md
+                  href: ./create-sql-api-java.md
                 - name: Async Java
-                  href: sql-api-async-java-get-started.md
+                  href: ./create-sql-api-java.md
                 - name: Node.js
                   href: sql-api-nodejs-get-started.md
             - name: Web アプリを構築する
@@ -831,9 +831,9 @@
             - name: Azure Event Hubs と Azure Storage
               href: 'https://github.com/hdinsight/hdinsight-storm-examples/blob/master/IotExample/README.md'
             - name: Spring Boot Starter の使用
-              href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
+              href: /azure/developer/java/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?context=%252fazure%252fcosmos-db%252fcontext%252fcontext
             - name: Spring Data の開発者ガイド
-              href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/how-to-guides-spring-data-cosmosdb?context=/azure/cosmos-db/context/context'
+              href: /azure/developer/java/spring-framework/how-to-guides-spring-data-cosmosdb?context=%252fazure%252fcosmos-db%252fcontext%252fcontext
             - name: ODBC ドライバー
               href: odbc-driver.md
     - name: リファレンス
@@ -950,7 +950,7 @@
           displayName: 'request units, RUs, RU, charge, consumption'
           href: find-request-unit-charge-cassandra.md
         - name: Spring Data の格納と管理
-          href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db?context=/azure/cosmos-db/context/context'
+          href: /azure/developer/java/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db?context=%252fazure%252fcosmos-db%252fcontext%252fcontext
         - name: Cassandra と Spark
           items:
             - name: はじめに
@@ -1086,7 +1086,7 @@
         - name: クエリ パフォーマンスのトラブルシューティング
           href: mongodb-troubleshoot-query.md
         - name: Spring Data の格納と管理
-          href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-mongodb-with-cosmos-db?context=/azure/cosmos-db/context/context'
+          href: /azure/developer/java/spring-framework/configure-spring-data-mongodb-with-cosmos-db?context=%252fazure%252fcosmos-db%252fcontext%252fcontext
         - name: MongoDB 拡張コマンド
           href: mongodb-custom-commands.md
           displayName: custom commands
@@ -1167,7 +1167,7 @@
         - name: グラフ データの視覚化
           href: graph-visualization.md
         - name: Spring Data の格納と管理
-          href: 'https://docs.microsoft.com/azure/developer/java/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db?context=/azure/cosmos-db/context/context'
+          href: /azure/developer/java/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db?context=%252fazure%252fcosmos-db%252fcontext%252fcontext
         - name: Resource Manager テンプレートを使用して管理する
           href: templates-samples-gremlin.md
           displayName: ARM
@@ -1200,7 +1200,7 @@
         - name: Node.js
           href: create-table-nodejs.md
         - name: Python
-          href: create-table-python.md
+          href: ./table-storage-how-to-use-python.md
     - name: チュートリアル
       items:
         - name: 1 - データの作成と管理
@@ -1215,7 +1215,7 @@
     - name: サンプル
       items:
         - name: .NET
-          href: table-storage-how-to-use-dotnet.md
+          href: ./tutorial-develop-table-dotnet.md
         - name: Java
           href: table-storage-how-to-use-java.md
         - name: Node.js
@@ -1373,7 +1373,7 @@
     - name: パートナー
       href: partners-migration-cosmosdb.md
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-cosmos-db.html'
+      href: /answers/topics/azure-cosmos-db.html
     - name: ビデオ
       href: 'https://azure.microsoft.com/resources/videos/index/?services=cosmos-db'
     - name: Azure のロードマップ
