--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -104,7 +104,7 @@
         - name: Azure CLI
           href: sample-scripts-azure-cli.md
         - name: Azure Policy の組み込み
-          href: policy-samples.md
+          href: ./policy-reference.md
     - name: 概念
       items:
         - name: サーバー
@@ -460,7 +460,7 @@
           items:
             - name: Azure portal
               href: flexible-server/how-to-maintenance-portal.md
-        - name: ネットワーキング
+        - name: ネットワーク
           items:
             - name: プライベート アクセス (VNet 統合)
               items:
@@ -542,7 +542,7 @@
           displayName: 'samples, azure cli'
         - name: Azure Policy の組み込み
           displayName: 'samples, policies, definitions'
-          href: ./policy-samples.md
+          href: ./policy-reference.md
     - name: 概念
       items:
         - name: 分散データ
@@ -640,7 +640,7 @@
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/postgresql/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-database-postgresql.html'
+      href: /answers/topics/azure-database-postgresql.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-database-postgresql'
     - name: ビデオ
